--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
                         NLP techniques to evaluate and intervene user's environmental attitudes and behaviors. </br>
                         </br>
 
-                        Currently, I'm working with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
+                        I had worked with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
                             href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
                         <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
-                            authored paper</a> published at CHI 2024 and a  <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper at CHI2025</a>.
-                    <p> 
+                            authored paper</a> published at CHI'24 and a <a
+                            href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper</a> at
+                        CHI'25.
+                    <p>
                         </br>
 
                         <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
@@ -172,18 +174,19 @@
                             <img src="./images/FD.png" alt="FD Publication">
                         </div>
                         <div class="publication-info">
-                            <h3>Frontend Diffusion: Empowering Self-Representation of Junior Researchers
-                                and Designers Through Agentic Workflows</h3>
-                            <p class="authors"> Zijian Ding, <strong>Qinshi Zhang</strong>, Qinshi Zhang, ZIYI WANG</p>
+                            <h3>Frontend Diffusion:
+                                Empowering Self-Representation of Researchers and
+                                Designers with Multi-agent System</h3>
+                            <p class="authors"> Zijian Ding, <strong>Qinshi Zhang</strong>, Qinshi Zhang, Ziyi WANG</p>
                             <!-- <p class="venue">In preparation for <a
                                     href="https://chi2024.acm.org/for-authors/late-breaking-work/">C&C 2025</a></p> -->
                             <div class="publication-links">
                                 <a href="https://x.com/jasonzding/status/1814046922874724767" class="btn btn-sm"><i
                                         class="fas fa-video"></i> Video</a>
-                                <a href="./PDF/C_C25_FD.pdf" class="btn btn-sm"><i
-                                        class="fas fa-file-pdf"></i> PDF</a>
-                                <a href="./PDF/C_C25_FD.pdf" class="btn btn-sm"><i
-                                        class="fas fa-code"></i> Code <span class="star-count">★</span></a>
+                                <a href="./PDF/VLHCC25_FD.pdf" class="btn btn-sm"><i class="fas fa-file-pdf"></i>
+                                    PDF</a>
+                                <a href="https://github.com/Carolzhangzz/frontendiffusion" class="btn btn-sm"><i class="fas fa-code"></i> Code <span
+                                        class="star-count">★</span></a>
                             </div>
                             <div class="publication-extra">
                                 <a href="#" class="btn btn-sm bibtex-toggle"><i class="fas fa-book"></i> BibTeX</a>
@@ -193,9 +196,10 @@
                     <div class="bibtex-content" style="display: none;">
                         <pre>
 @article{zhang2024frontend,
-    title={Frontend Diffusion: Empowering Self-Representation of Junior Researchers
-        and Designers Through Agentic Workflows},
-    author={Ding, Zijian, Zhang, Qinshi, Chi, Mohan, ZIYI WANG},
+    title={Frontend Diffusion:
+Empowering Self-Representation of Researchers and
+Designers with Multi-agent System},
+    author={Ding, Zijian, Zhang, Qinshi, Chi, Mohan, WANG, Ziyi},
     journal={arXiv e-prints},
     pages={arXiv--2408},
     year={2024}
@@ -255,11 +259,19 @@
             <h2>News</h2>
             <div class="news-container">
                 <div class="news-item">
+                    <span class="date">2025.08</span>
+                    <div class="news-content">
+                        Our paper,
+                        <a href="./PDF/VLHCC25_FD.pdf">Frontend Diffusion</a>,
+                        has been accepted at VLHCC 25!
+                    </div>
+                </div>
+                <div class="news-item">
                     <span class="date">2025.01</span>
                     <div class="news-content">
                         Our paper,
-                        <a href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">Can AI Prompt Humans</a>,
-                        has been conditionally accepted at CHI 2025!
+                        <a href="https://dl.acm.org/doi/10.1145/3706598.3713661">Can AI Prompt Humans</a>,
+                        has been fully accepted at CHI 2025!
                     </div>
                 </div>
                 <div class="news-item">
