--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 Consequences to Raise Sustainability Awareness</h3>
                             <p class="authors"><strong>Qinshi Zhang</strong>, Ruoyu Wen, Zijian Ding, Latisha Besariani
                                 Hendra, Ray LC†</p>
-                            <p class="venue">CHI 2025</p>
+                            <p class="venue">CHI Conference on Human Factors in Computing Systems 2025</p>
                             <div class="publication-links">
                                 <a href="https://ecoecho.duckdns.org/" class="btn btn-sm"><i class="fas fa-play"></i>
                                     Demo</a>
@@ -178,7 +178,8 @@
                                 Empowering Self-Representation of Researchers and
                                 Designers with Multi-agent System</h3>
                             <p class="authors"> Zijian Ding, <strong>Qinshi Zhang</strong>, Qinshi Zhang, Ziyi WANG</p>
-                            <!-- <p class="venue">In preparation for <a
+                            <p class="venue">IEEE Symposium on Visual Languages and Human-Centric Computing 2025</p>
+                            <!-- <p class="venue">In preparation for 
                                     href="https://chi2024.acm.org/for-authors/late-breaking-work/">C&C 2025</a></p> -->
                             <div class="publication-links">
                                 <a href="https://x.com/jasonzding/status/1814046922874724767" class="btn btn-sm"><i
