--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <h3>Frontend Diffusion:
                                 Empowering Self-Representation of Researchers and
                                 Designers with Multi-agent System</h3>
-                            <p class="authors"> Zijian Ding, <strong>Qinshi Zhang</strong>, Qinshi Zhang, Ziyi Wang</p>
+                            <p class="authors"> Zijian Ding, <strong>Qinshi Zhang</strong>, Mohan Chi, Ziyi Wang</p>
                             <p class="venue">IEEE Symposium on Visual Languages and Human-Centric Computing 2025</p>
                             <!-- <p class="venue">In preparation for 
                                     href="https://chi2024.acm.org/for-authors/late-breaking-work/">C&C 2025</a></p> -->
