--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <div class="publication-links">
                                 <a href="https://ecoecho.duckdns.org/" class="btn btn-sm"><i class="fas fa-play"></i>
                                     Demo</a>
-                                <a href="https://arxiv.org/abs/2409.08486" class="btn btn-sm"><i
+                                <a href="https://dl.acm.org/doi/10.1145/3706598.3713661" class="btn btn-sm"><i
                                         class="fas fa-file-pdf"></i> PDF</a>
                                 <a href="https://github.com/Carolzhangzz/Eco_Echo" class="btn btn-sm"><i
                                         class="fas fa-code"></i> Code <span class="star-count">★</span></a>
