--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         NLP techniques to evaluate and intervene user's environmental attitudes and behaviors. </br>
                         </br>
 
-                        I had worked with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
+                        I have worked with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
                             href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
                         <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">co-first
