--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="profile-text">
                     </br>
 
-                    <p>Hi, I'm Carol Zhang. I'm currently a first-year Computer Science Master student at the University
+                    <p>Hi, I'm Carol Zhang. I'm currently a Computer Science Master student at the University
                         of California, San Diego (UCSD).
                     </p>
                     </br>
