--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                                         class="fas fa-video"></i> Video</a>
                                 <a href="./PDF/VLHCC25_FD.pdf" class="btn btn-sm"><i class="fas fa-file-pdf"></i>
                                     PDF</a>
-                                <a href="https://github.com/Carolzhangzz/frontendiffusion" class="btn btn-sm"><i class="fas fa-code"></i> Code <span
-                                        class="star-count">★</span></a>
+                                <a href="https://github.com/Carolzhangzz/frontendiffusion" class="btn btn-sm"><i
+                                        class="fas fa-code"></i> Code <span class="star-count">★</span></a>
                             </div>
                             <div class="publication-extra">
                                 <a href="#" class="btn btn-sm bibtex-toggle"><i class="fas fa-book"></i> BibTeX</a>
@@ -259,6 +259,14 @@ Designers with Multi-agent System},
         <section id="news">
             <h2>News</h2>
             <div class="news-container">
+                <div class="news-item">
+                    <span class="date">2025.09</span>
+                    <div class="news-content">
+                        I will attend
+                        <a href="https://neurips.cc/Conferences/2025">NeurIPS 2025</a>
+                        (Dec 2–7, San Diego Convention Center, USA).
+                    </div>
+                </div>
                 <div class="news-item">
                     <span class="date">2025.08</span>
                     <div class="news-content">
