--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ Designers with Multi-agent System},
                     <div class="news-content">
                         I will attend
                         <a href="https://neurips.cc/Conferences/2025">NeurIPS 2025</a>
-                        (Dec 2–7, San Diego Convention Center, USA).
+                        (Dec 2–7, San Diego Convention Center).
                     </div>
                 </div>
                 <div class="news-item">
