--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Designers with Multi-agent System},
                     <span class="date">2025.09</span>
                     <div class="news-content">
                         I will attend
-                        <a href="https://neurips.cc/Conferences/2025">NeurIPS 2025</a>
+                        <a href="https://neurips.cc/Conferences/2025">NeurIPS'25</a>
                         (Dec 2–7, San Diego Convention Center).
                     </div>
                 </div>
