--- a/index.html
+++ b/index.html
@@ -250,6 +250,33 @@ Designers with Multi-agent System},
                         </div>
                     </div>
                 </div>
+                <div class="publication-item">
+                    <div class="publication-content">
+                        <div class="publication-image">
+                            <img src="./images/multimodal-news.png" alt="Multimodal News RecSys" class="scaled-image">
+                        </div>
+                        <div class="publication-info">
+                            <h3>Multimodal News Recommendation</h3>
+                            <p class="venue">
+                                Multimodal News Recommendation: MMGCN collaborative baseline vs. content-based methods
+                            </p>
+                            <p class="venue">
+                                <strong>Focus:</strong> benchmarking MMGCN vs. content-only (text + price)<br>
+                                and exploring fusion strategies for cold-start.
+                            </p>
+                            <div class="publication-links">
+                                <a href="https://github.com/Carolzhangzz/Multimodal-News-RecSys" class="btn btn-sm">
+                                    <i class="fab fa-github"></i> Code
+                                </a>
+                                <a href="https://amazon-reviews-2023.github.io/" class="btn btn-sm">
+                                    <i class="fas fa-database"></i> Dataset (Amazon Reviews’23)
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
             </div>
         </section>
