--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@ Designers with Multi-agent System},
                         </div>
                     </div>
                 </div>
+             
                 <div class="publication-item">
                     <div class="publication-content">
                         <div class="publication-image">
@@ -245,6 +246,11 @@ Designers with Multi-agent System},
                             <div class="publication-links">
                                 <a href="./PDF/notebooks.pdf" class="btn btn-sm">
                                     <i class="fas fa-link"></i> PDF
+                                </a>
+                                <!-- 新增 Google Slides 链接 -->
+                                <a href="https://docs.google.com/presentation/d/1pwIb-2nogqswJQbXpHx3GFLj_1Lj7zMxRAZ0DQha_cs/edit?usp=sharing"
+                                    class="btn btn-sm" target="_blank">
+                                    <i class="fas fa-slideshare"></i> Slides
                                 </a>
                             </div>
                         </div>
@@ -262,7 +268,8 @@ Designers with Multi-agent System},
                             </p>
                             <p class="venue">
                                 <strong>Focus:</strong> benchmarking MMGCN vs. content-only (text + price)<br>
-                                with partial use of image features (CLIP) and exploring fusion strategies for cold-start.
+                                with partial use of image features (CLIP) and exploring fusion strategies for
+                                cold-start.
                             </p>
                             <div class="publication-links">
                                 <a href="https://github.com/Carolzhangzz/Multimodal-News-RecSys" class="btn btn-sm">
