--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Designers with Multi-agent System},
                                     <i class="fas fa-link"></i> PDF
                                 </a>
                                 <!-- 新增 Google Slides 链接 -->
-                                <a href="https://docs.google.com/presentation/d/1pwIb-2nogqswJQbXpHx3GFLj_1Lj7zMxRAZ0DQha_cs/edit?usp=sharing"
+                                <a href="./PDF/CSE 291B00 Project Presentation.pdf"
                                     class="btn btn-sm" target="_blank">
                                     <i class="fas fa-slideshare"></i> Slides
                                 </a>
