--- a/index.html
+++ b/index.html
@@ -85,6 +85,48 @@
 
             <p>Note: * indicates equal contribution; † indicates the corresponding author.</p>
             <br>
+            <div class="publication-container">
+                <div class="publication-item">
+                    <div class="publication-content">
+                        <div class="publication-image">
+                            <img src="./images/FD.png" alt="FD Publication">
+                        </div>
+                        <div class="publication-info">
+                            <h3>Frontend Diffusion:
+                                Empowering Self-Representation of Researchers and
+                                Designers with Multi-agent System</h3>
+                            <p class="authors"> Zijian Ding, <strong>Qinshi Zhang</strong>, Mohan Chi, Ziyi Wang</p>
+                            <p class="venue">IEEE Symposium on Visual Languages and Human-Centric Computing 2025</p>
+                            <!-- <p class="venue">In preparation for 
+                                    href="https://chi2024.acm.org/for-authors/late-breaking-work/">C&C 2025</a></p> -->
+                            <div class="publication-links">
+                                <a href="https://x.com/jasonzding/status/1814046922874724767" class="btn btn-sm"><i
+                                        class="fas fa-video"></i> Video</a>
+                                <a href="./PDF/VLHCC25_FD.pdf" class="btn btn-sm"><i class="fas fa-file-pdf"></i>
+                                    PDF</a>
+                                <a href="https://github.com/Carolzhangzz/frontendiffusion" class="btn btn-sm"><i
+                                        class="fas fa-code"></i> Code <span class="star-count">★</span></a>
+                            </div>
+                            <div class="publication-extra">
+                                <a href="#" class="btn btn-sm bibtex-toggle"><i class="fas fa-book"></i> BibTeX</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="bibtex-content" style="display: none;">
+                        <pre>
+@article{zhang2024frontend,
+    title={Frontend Diffusion:
+Empowering Self-Representation of Researchers and
+Designers with Multi-agent System},
+    author={Ding, Zijian, Zhang, Qinshi, Chi, Mohan, WANG, Ziyi},
+    journal={arXiv e-prints},
+    pages={arXiv--2408},
+    year={2024}
+}
+                        </pre>
+                    </div>
+                </div>
+            </div>
 
             <div class="publication-container">
                 <div class="publication-item">
@@ -167,48 +209,7 @@
                 </div>
             </div>
 
-            <div class="publication-container">
-                <div class="publication-item">
-                    <div class="publication-content">
-                        <div class="publication-image">
-                            <img src="./images/FD.png" alt="FD Publication">
-                        </div>
-                        <div class="publication-info">
-                            <h3>Frontend Diffusion:
-                                Empowering Self-Representation of Researchers and
-                                Designers with Multi-agent System</h3>
-                            <p class="authors"> Zijian Ding, <strong>Qinshi Zhang</strong>, Mohan Chi, Ziyi Wang</p>
-                            <p class="venue">IEEE Symposium on Visual Languages and Human-Centric Computing 2025</p>
-                            <!-- <p class="venue">In preparation for 
-                                    href="https://chi2024.acm.org/for-authors/late-breaking-work/">C&C 2025</a></p> -->
-                            <div class="publication-links">
-                                <a href="https://x.com/jasonzding/status/1814046922874724767" class="btn btn-sm"><i
-                                        class="fas fa-video"></i> Video</a>
-                                <a href="./PDF/VLHCC25_FD.pdf" class="btn btn-sm"><i class="fas fa-file-pdf"></i>
-                                    PDF</a>
-                                <a href="https://github.com/Carolzhangzz/frontendiffusion" class="btn btn-sm"><i
-                                        class="fas fa-code"></i> Code <span class="star-count">★</span></a>
-                            </div>
-                            <div class="publication-extra">
-                                <a href="#" class="btn btn-sm bibtex-toggle"><i class="fas fa-book"></i> BibTeX</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="bibtex-content" style="display: none;">
-                        <pre>
-@article{zhang2024frontend,
-    title={Frontend Diffusion:
-Empowering Self-Representation of Researchers and
-Designers with Multi-agent System},
-    author={Ding, Zijian, Zhang, Qinshi, Chi, Mohan, WANG, Ziyi},
-    journal={arXiv e-prints},
-    pages={arXiv--2408},
-    year={2024}
-}
-                        </pre>
-                    </div>
-                </div>
-            </div>
+
 
             <h2>Projects</h2>
             <div class="publication-container">
@@ -231,7 +232,7 @@ Designers with Multi-agent System},
                         </div>
                     </div>
                 </div>
-             
+
                 <div class="publication-item">
                     <div class="publication-content">
                         <div class="publication-image">
@@ -247,8 +248,7 @@ Designers with Multi-agent System},
                                 <a href="./PDF/notebooks.pdf" class="btn btn-sm">
                                     <i class="fas fa-link"></i> PDF
                                 </a>
-                                <a href="./PDF/CSE 291B00 Project Presentation.pdf"
-                                    class="btn btn-sm" target="_blank">
+                                <a href="./PDF/CSE 291B00 Project Presentation.pdf" class="btn btn-sm" target="_blank">
                                     <i class="fas fa-slideshare"></i> Slides
                                 </a>
                             </div>
