--- a/index.html
+++ b/index.html
@@ -212,6 +212,28 @@ Designers with Multi-agent System},
 
 
             <h2>Projects</h2>
+            <div class="publication-item">
+                <div class="publication-content">
+                    <div class="publication-image">
+                        <img src="./images/jupyter.png" alt="jupyter" class="scaled-image">
+                    </div>
+                    <div class="publication-info">
+                        <h3>Classifying Applications, Structure,
+                            and Data Transformations in Jupyter
+                            Notebooks</h3>
+                        <p class="venue">Jacob Yim*, Qinshi Zhang*</p>
+                        <p class="venue">An Exploratory Study</p>
+                        <div class="publication-links">
+                            <a href="./PDF/notebooks.pdf" class="btn btn-sm">
+                                <i class="fas fa-link"></i> PDF
+                            </a>
+                            <a href="./PDF/CSE 291B00 Project Presentation.pdf" class="btn btn-sm" target="_blank">
+                                <i class="fas fa-slideshare"></i> Slides
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="publication-container">
                 <div class="publication-item">
                     <div class="publication-content">
@@ -233,28 +255,7 @@ Designers with Multi-agent System},
                     </div>
                 </div>
 
-                <div class="publication-item">
-                    <div class="publication-content">
-                        <div class="publication-image">
-                            <img src="./images/jupyter.png" alt="jupyter" class="scaled-image">
-                        </div>
-                        <div class="publication-info">
-                            <h3>Classifying Applications, Structure,
-                                and Data Transformations in Jupyter
-                                Notebooks</h3>
-                            <p class="venue">Jacob Yim*, Qinshi Zhang*</p>
-                            <p class="venue">An Exploratory Study</p>
-                            <div class="publication-links">
-                                <a href="./PDF/notebooks.pdf" class="btn btn-sm">
-                                    <i class="fas fa-link"></i> PDF
-                                </a>
-                                <a href="./PDF/CSE 291B00 Project Presentation.pdf" class="btn btn-sm" target="_blank">
-                                    <i class="fas fa-slideshare"></i> Slides
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
                 <div class="publication-item">
                     <div class="publication-content">
                         <div class="publication-image">
@@ -263,7 +264,7 @@ Designers with Multi-agent System},
                         <div class="publication-info">
                             <h3>Multimodal News Recommendation</h3>
                             <p class="venue">
-                                Multimodal News Recommendation: MMGCN collaborative baseline vs. content-based methods
+                                Multimodal News Recommendation
                             </p>
                             <p class="venue">
                                 <strong>Focus:</strong> benchmarking MMGCN vs. content-only (text + price)<br>
