--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@ Designers with Multi-agent System},
                             </p>
                             <p class="venue">
                                 <strong>Focus:</strong> benchmarking MMGCN vs. content-only (text + price)<br>
-                                with partial use of image features (CLIP) and exploring fusion strategies for
-                                cold-start.
+                                with partial use of image features (CLIP) exploring fusion strategies for cold-start.
                             </p>
                             <div class="publication-links">
                                 <a href="https://github.com/Carolzhangzz/Multimodal-News-RecSys" class="btn btn-sm">
