--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             University of Technology (AUT)</a>, advised by Dr. Lin Xiang and Dr. Haijun Tao.</p> -->
                 </div>
                 <div class="profile-image">
-                    <img src="./images/carol_brown.jpeg" alt="Carol Zhang" class="profile-photo">
+                    <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
                     <div class="social-links"
                         style="font-size: 24px; display: flex; gap: 20px; justify-content: center;">
                         <a href="./cv.html" title="CV"
@@ -279,11 +279,6 @@ Designers with Multi-agent System},
                         </div>
                     </div>
                 </div>
-
-
-
-
-
             </div>
             </div>
         </section>
