--- a/index.html
+++ b/index.html
@@ -39,9 +39,14 @@
                             href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper</a> at
                         CHI'25.
                     <p>
-                        </br>
+                    </br>
+                    <p class="collaboration-text">
+                        If you’d like to collaborate or just chat about research, my email is
+                        <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
+                    </p>
 
-                        <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
+
+                    <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                         Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
                         another degree in Computer and Information Science at <a href="https://www.aut.ac.nz/">Auckland
                             University of Technology (AUT)</a>, advised by Dr. Lin Xiang and Dr. Haijun Tao.</p> -->
