--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <p>
                     </br>
                     <p class="collaboration-text">
-                        If you’d like to collaborate or just chat about research, my email is
+                        I am happy to collaborate or just chat about research, my email is
                         <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
                     </p>
 
