--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper</a> at
                         CHI'25.
                     <p>
-                    </br>
+                        </br>
                     <p class="collaboration-text">
                         I am happy to collaborate or just chat about research, my email is
                         <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
@@ -152,10 +152,14 @@ Designers with Multi-agent System},
                                         class="fas fa-file-pdf"></i> PDF</a>
                                 <a href="https://github.com/Carolzhangzz/Eco_Echo" class="btn btn-sm"><i
                                         class="fas fa-code"></i> Code <span class="star-count">★</span></a>
+                                <a href="video/pn3281-talk-video.mp4" class="btn btn-sm">
+                                    <i class="fas fa-video"></i> Video
+                                </a>
                             </div>
                             <div class="publication-extra">
                                 <a href="#" class="btn btn-sm bibtex-toggle"><i class="fas fa-book"></i> BibTeX</a>
                             </div>
+
                         </div>
                     </div>
                     <div class="bibtex-content" style="display: none;">
