--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@ Designers with Multi-agent System},
                                         class="fas fa-file-pdf"></i> PDF</a>
                                 <a href="https://github.com/Carolzhangzz/Eco_Echo" class="btn btn-sm"><i
                                         class="fas fa-code"></i> Code <span class="star-count">★</span></a>
-                                <a href="video/pn3281-talk-video.mp4" class="btn btn-sm">
+                                <!-- <a href="video/pn3281-talk-video.mp4" class="btn btn-sm">
                                     <i class="fas fa-video"></i> Video
-                                </a>
+                                </a> -->
                             </div>
                             <div class="publication-extra">
                                 <a href="#" class="btn btn-sm bibtex-toggle"><i class="fas fa-book"></i> BibTeX</a>
