--- a/cv.html
+++ b/cv.html
@@ -265,6 +265,9 @@
 
         <section id="service">
             <h2>Service</h2>
+              <h3>Teaching Assistant</h3>
+    <p>Teaching Assistant, Human-Centered AI (CSE 291A), UCSD <a href="https://hxi.ucsd.edu/author/nadir-weibel/">Prof. Nadir Weibel</a>, Fall 2025</p>
+
 
             <h3>Volunteer </h3>
             <p>Volunteer, CHI, 2024 </p>
