--- a/cv.html
+++ b/cv.html
@@ -226,23 +226,30 @@
 
         <section id="industry-research">
             <h2>Industry Experience</h2>
+            <div class="experience-item">
+                <h3>China Mobile International <span class="location">Hangzhou, CN</span></h3>
+                <p class="position">AI Software Engineer Intern (NLP)</p>
+                <p class="date">June 2025 — Sept. 2025</p>
+                <p>Designed a cold-start recommendation pipeline with LightGCN and content-based baselines; built
+                    feature extraction modules and evaluation framework on Amazon Reviews’23 dataset.</p>
+            </div>
 
             <div class="experience-item">
-                <h3> Neoboard <span class="location">Riverside, CA</span></h3>
+                <h3>Neoboard <span class="location">Riverside, CA</span></h3>
                 <p class="position">Front-end Develop Intern</p>
-                <p class="date">April. 2024 — June. 2024</p>
-                <p>Using React, Redux, and React Router to build a user-friendly interface for Neoboard, a classroom
-                    workflow automation system</p>
+                <p class="date">April 2024 — June 2024</p>
+                <p>Built a user-friendly interface for a classroom workflow automation system using React, Redux, and
+                    React Router.</p>
             </div>
+
             <div class="experience-item">
-                <h3> Functor Z <span class="location">Hangzhou, CN</span></h3>
+                <h3>Functor Z <span class="location">Hangzhou, CN</span></h3>
                 <p class="position">Software Develop Intern</p>
-                <p class="date">June. 2022 — Sept. 2022</p>
-                <p>Developed a basketball mini-app game using Uni-app and MongoDB on a cloud-based platform. </p>
+                <p class="date">June 2022 — Sept. 2022</p>
+                <p>Developed a basketball mini-app game using Uni-app and MongoDB on a cloud-based platform.</p>
             </div>
+
         </section>
-
-
 
         <section id="awards">
             <h2>Awards and Honors</h2>
@@ -266,32 +273,14 @@
         <section id="service">
             <h2>Service</h2>
             <h3>Teaching Assistant</h3>
-            <p>Human-Centered AI (CSE 291A), UCSD <a
-                    href="https://hxi.ucsd.edu/author/nadir-weibel/">Prof. Nadir Weibel</a>, Fall 2025</p>
+            <p>Human-Centered AI (CSE 291A), UCSD <a href="https://hxi.ucsd.edu/author/nadir-weibel/">Prof. Nadir
+                    Weibel</a>, Fall 2025</p>
             <h3>Volunteer </h3>
             <p>Volunteer, CHI, 2024 </p>
             <p>Volunteer, Chinese CHI, 2023 </p>
             <h3>Conference Reviewer</h3>
             <p>ACM Conference on Human Factors in Computing Systems (CHI) 2024</p>
-            <!-- 
-            <h3>Organizer</h3>
-            <p>Workshop on Visualization for AI Explainability at VIS (<strong>VISxAI</strong>) 2022, 2023</p>
 
-            <h3>Session Chair</h3>
-            <p>ACM Conference on Human Factors in Computing Systems (<strong>CHI</strong>) 2024</p>
-            <p>The Web Conference (<strong>WWW</strong>) 2023</p>
-
-            <h3>Program Committee</h3>
-            <p>European Conference on Machine Learning and Data Mining (<strong>ECML PKDD</strong>) 2021, 2022, 2023,
-                2024</p>
-            <p>ACM Conference on Fairness, Accountability, and Transparency (<strong>FAccT</strong>) 2023</p>
-            <p>Annual Meeting of the Association for Computational Linguistics (<strong>ACL</strong>) 2023, 2024</p>
-            <p>ACM Conference on Information and Knowledge Management (<strong>CIKM</strong>) 2020, 2021, 2022, 2023,
-                2024</p>
-            <p>IEEE International Conference on Big Data (<strong>IEEE BigData</strong>) 2024</p>
-            <p>ACM Conference on Intelligent User Interfaces (<strong>IUI</strong>) 2022, 2023, 2024</p>
-            <p>ACM Conference on Information Retrieval (<strong>SIGIR</strong>) 2021, 2022, 2023, 2024</p>
-            <p>The Web Conference (<strong>WWW</strong>) 2023</p> -->
         </section>
 
 
