--- a/cv.html
+++ b/cv.html
@@ -227,7 +227,7 @@
         <section id="industry-research">
             <h2>Industry Experience</h2>
             <div class="experience-item">
-                <h3>China Mobile International <span class="location">Hangzhou, CN</span></h3>
+                <h3>China Mobile<span class="location">HuZhou, CN</span></h3>
                 <p class="position">AI Software Engineer Intern (NLP)</p>
                 <p class="date">June 2025 — Sept. 2025</p>
                 <p>Designed a cold-start recommendation pipeline with LightGCN and content-based baselines; built
