--- a/cv.html
+++ b/cv.html
@@ -280,6 +280,8 @@
             <p>Volunteer, Chinese CHI, 2023 </p>
             <h3>Conference Reviewer</h3>
             <p>ACM Conference on Human Factors in Computing Systems (CHI) 2024</p>
+            <p>ACM Conference on Human Factors in Computing Systems (CHI) 2026</p>
+
 
         </section>
 
