--- a/index.html
+++ b/index.html
@@ -52,9 +52,14 @@
                             University of Technology (AUT)</a>, advised by Dr. Lin Xiang and Dr. Haijun Tao.</p> -->
                 </div>
                 <div class="profile-image">
+
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
+                    </br>
+                    <!-- 加粗 -->
+                    <p> <strong>CS Master's Student @ UC San Diego'26 </strong></p>
+                    </br>
                     <div class="social-links"
-                        style="font-size: 24px; display: flex; gap: 20px; justify-content: center;">
+                        style="font-size: 24px; display: flex; flex-wrap: wrap; gap: 28px; justify-content: center;">
                         <a href="./cv.html" title="CV"
                             style="color: #333; text-decoration: none; display: flex; align-items: center;">
                             <i class="fas fa-file-alt" style="margin-right: 4px;"></i>
@@ -75,6 +80,16 @@
                         <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"
                             style="color: #0077B5; text-decoration: none;">
                             <i class="fab fa-linkedin"></i>
+                        </a>
+                        <a href="https://www.instagram.com/caprice_kiwi/" title="Instagram"
+                            style="color: #E1306C; text-decoration: none;">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+
+                        <a href="https://www.xiaohongshu.com/user/profile/5fb856f80000000001001f7b" title="Xiaohongshu"
+                            style="display: inline-flex; align-items: center; text-decoration: none;">
+                            <img src="./images/xiaohongshu.svg" alt="Xiaohongshu"
+                                style="width: 20px; height: 20px; border-radius: 4px;">
                         </a>
                     </div>
                     <div class="cta-buttons">
