--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
                     <p>Hi, I'm Carol Zhang. I'm currently a Computer Science Master student at the University
                         of California, San Diego (UCSD).
                     </p>
-                    </br>
-                    <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
-                            Interaction</strong>. </br> </br>
-                        I have designed and developed <strong> conversational agents </strong> leveraging
-                        NLP techniques to evaluate and intervene user's environmental attitudes and behaviors. </br>
-                        </br>
 
+                    <p>My main research interests focus on <strong>AI for Social Good</strong> and <strong>Human-AI
+                            Interaction</strong>.
+                        I have designed and developed <strong> conversational agents </strong> leveraging
+                        NLP techniques to evaluate and intervene user's environmental attitudes and behaviors.
+                        </br> </br>
                         I have worked with <a href="https://spdow.ucsd.edu/">Prof. Steven Dow</a> at <a
                             href="https://designlab.ucsd.edu/">UCSD Design Lab</a>. I also have worked with <a
                             href="https://www.scm.cityu.edu.hk/people/ray-lc">Dr.Ray LC</a> at HK CityU, resulting in a
@@ -39,12 +38,18 @@
                             href="./PDF/GameSustainability_CHI_25__Clean_Version_.pdf">first authored paper</a> at
                         CHI'25.
                     <p>
-                        </br>
+
                     <p class="collaboration-text">
                         I am happy to collaborate or just chat about research, my email is
                         <a href="mailto:qiz065@ucsd.edu">qiz065@ucsd.edu</a>.
                     </p>
-
+                    <div class="research-tags">
+                        <span class="tag">🤖 AI for Social Good</span>
+                        <span class="tag">💬 Human-AI Interaction</span>
+                        <span class="tag">🌱 Environmental Behavior Change</span>
+                        <span class="tag">🎮 Game-based Learning</span>
+                        <span class="tag">📊 NLP & Conversational Agents</span>
+                    </div>
 
                     <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
                         Engineering at <a href="https://english.cjlu.edu.cn/">China Jiliang University (CJLU)</a> and
