--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="profile-image">
 
                     <img src="./images/carol.png" alt="Carol Zhang" class="profile-photo">
-                    </br>
+                    </br=>
                     <!-- 加粗 -->
                     <p> <strong>CS Master's Student @ UC San Diego'26 </strong></p>
                     </br>
@@ -93,11 +93,11 @@
                             <i class="fab fa-instagram"></i>
                         </a>
 
-                        <a href="https://www.xiaohongshu.com/user/profile/5fb856f80000000001001f7b" title="Xiaohongshu"
+                        <!-- <a href="https://www.xiaohongshu.com/user/profile/5fb856f80000000001001f7b" title="Xiaohongshu"
                             style="display: inline-flex; align-items: center; text-decoration: none;">
                             <img src="./images/xiaohongshu.svg" alt="Xiaohongshu"
                                 style="width: 20px; height: 20px; border-radius: 4px;">
-                        </a>
+                        </a> -->
                     </div>
                     <div class="cta-buttons">
                         <!-- <a href="mailto:qiz065@ucsd.edu" class="btn btn-primary">Email</a>
