--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <span class="tag">🎮 Game-based Learning</span>
                         <span class="tag">📊 NLP & Conversational Agents</span>
                         <span class="tag">🌐 Web3 & Blockchain</span>
-                      
+
                     </div>
 
                     <!-- <p>I obtained my Bachelor's degree in Computer Science and Technology from the School of Information
@@ -92,6 +92,11 @@
                             style="color: #E1306C; text-decoration: none;">
                             <i class="fab fa-instagram"></i>
                         </a>
+                        <a href="https://t.me/carolzhangzz" title="Telegram"
+                            style="color: #0088cc; text-decoration: none;">
+                            <i class="fab fa-telegram-plane"></i>
+                        </a>
+
 
                         <!-- <a href="https://www.xiaohongshu.com/user/profile/5fb856f80000000001001f7b" title="Xiaohongshu"
                             style="display: inline-flex; align-items: center; text-decoration: none;">
@@ -374,8 +379,8 @@ Designers with Multi-agent System},
                 <div class="news-item">
                     <span class="date">2024.01</span>
                     <div class="news-content">
-                        <p>One Paper accepted to <a href="https://chi2024.acm.org/">CHI Conference on Human Factors in
-                                Computing Systems</a>.</p>
+                        <p>Our Paper <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram</a> has been accepted to <a href="https://chi2024.acm.org/">CHI Conference on Human Factors in
+                                Computing Systems 2024!</a>.</p>
                     </div>
                 </div>
                 <div class="news-item">
