--- a/index.html
+++ b/index.html
@@ -379,8 +379,7 @@ Designers with Multi-agent System},
                 <div class="news-item">
                     <span class="date">2024.01</span>
                     <div class="news-content">
-                        <p>Our Paper <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram</a> has been accepted to <a href="https://chi2024.acm.org/">CHI Conference on Human Factors in
-                                Computing Systems 2024!</a>.</p>
+                        <p>Our Paper <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram</a> has been accepted to <a href="https://chi2024.acm.org/">CHI 2024!</a>.</p>
                     </div>
                 </div>
                 <div class="news-item">
