--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
                             style="color: #0077B5; text-decoration: none;">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="https://www.instagram.com/caprice_kiwi/" title="Instagram"
+                        <!-- <a href="https://www.instagram.com/caprice_kiwi/" title="Instagram"
                             style="color: #E1306C; text-decoration: none;">
                             <i class="fab fa-instagram"></i>
-                        </a>
+                        </a> -->
                         <a href="https://t.me/carolzhangzz" title="Telegram"
                             style="color: #0088cc; text-decoration: none;">
                             <i class="fab fa-telegram-plane"></i>
