--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <span class="tag">🤖 AI for Social Good</span>
                         <span class="tag">💬 Human-AI Interaction</span>
                         <span class="tag">🌱 Environmental Behavior Change</span>
-                        <span class="tag">🎮 Game-based Learning</span>
+                        <span class="tag">🎮 Serious Game Design</span>
                         <span class="tag">📊 NLP & Conversational Agents</span>
                         <span class="tag">🌐 Web3 & Blockchain</span>
 
@@ -80,10 +80,20 @@
                             title="Google Scholar" style="color: #4285f4; text-decoration: none;">
                             <i class="fas fa-graduation-cap"></i>
                         </a>
-                        <a href="https://twitter.com/Carol_Zhang1027" title="Twitter"
+                        <a href="https://twitter.com/" class="social-icon">
+                            <i class="fa-brands fa-x-twitter"></i>
+                            X
+                        </a>
+
+
+                        <!-- <a href="https://twitter.com/Carol_Zhang1027" title="Twitter"
                             style="color: #1DA1F2; text-decoration: none;">
                             <i class="fab fa-twitter"></i>
-                        </a>
+                        </a><a href="https://twitter.com/" class="social-icon">
+                            <i class="fa-brands fa-x-twitter"></i> X
+                        </a> -->
+
+
                         <a href="https://www.linkedin.com/in/qinshiz/" title="LinkedIn"
                             style="color: #0077B5; text-decoration: none;">
                             <i class="fab fa-linkedin"></i>
@@ -379,7 +389,8 @@ Designers with Multi-agent System},
                 <div class="news-item">
                     <span class="date">2024.01</span>
                     <div class="news-content">
-                        <p>Our Paper <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram</a> has been accepted to <a href="https://chi2024.acm.org/">CHI 2024!</a>.</p>
+                        <p>Our Paper <a href="https://dl.acm.org/doi/abs/10.1145/3613904.3642850">Eternagram</a> has
+                            been accepted to <a href="https://chi2024.acm.org/">CHI 2024!</a>.</p>
                     </div>
                 </div>
                 <div class="news-item">
