--- a/cv.html
+++ b/cv.html
@@ -291,7 +291,7 @@
 
             <h3>Technical Skills</h3>
             <p><strong>Programming Languages:</strong> Python, Java, JavaScript, TypeScript, R, SQL, LaTeX, MATLAB,
-                HTML/CSS</p>
+                HTML/CSS, C++</p>
             <p><strong>Machine Learning & Natural Language Processing:</strong> Langchain, PyTorch, TensorFlow, Hugging
                 Face Transformers, Scikit-learn, Pandas, NLTK, Language Model Fine-tuning (e.g., BERT, GPT)</p>
             <p><strong>Web & Mobile Development:</strong> Node.js, React.js, Flask, FastAPI, Django</p>
@@ -304,7 +304,7 @@
             <p>User research (interview, survey, user testing), HCI Qualitative/Quantitative Analysis, Surveys</p>
          -->
             <h3>Tools & Platforms</h3>
-            <p>Unity, Visual Studio Code, Git, Firebase, Miro, Excel, AWS EC2, Azure</p>
+            <p>Unity, Visual Studio Code, Git, Firebase, Miro, Excel, AWS EC2, Azure, Phaser</p>
 
             <h3>Languages</h3>
             <p>Mandarin (native), English (fluent)</p>
