--- a/cv.html
+++ b/cv.html
@@ -289,26 +289,33 @@
         <section id="skills">
             <h2>Skills</h2>
 
-            <h3>Technical Skills</h3>
-            <p><strong>Programming Languages:</strong> Python, Java, JavaScript, TypeScript, R, SQL, LaTeX, MATLAB,
-                HTML/CSS, C++</p>
-            <p><strong>Machine Learning & Natural Language Processing:</strong> Langchain, PyTorch, TensorFlow, Hugging
-                Face Transformers, Scikit-learn, Pandas, NLTK, Language Model Fine-tuning (e.g., BERT, GPT)</p>
-            <p><strong>Web & Mobile Development:</strong> Node.js, React.js, Flask, FastAPI, Django</p>
-            <p><strong>Data Analysis & Visualization:</strong> Kafka, Spark, Redis, Matplotlib, Seaborn, Tableau</p>
+            <h3>Programming Languages</h3>
+            <p>Python, JavaScript (ES6+), TypeScript, Java, C++, R, SQL, LaTeX, MATLAB, HTML/CSS</p>
+
+            <h3>Machine Learning & Natural Language Processing</h3>
+            <p>PyTorch, TensorFlow, LangChain, Hugging Face Transformers, Scikit-learn, Pandas, NLTK, spaCy,
+                SentenceTransformers, ConvAI, Groq, OpenAI API, LLaMA, BERT, GPT</p>
+
+            <h3>Web & Game Development</h3>
+            <p>React.js, Node.js, Express, Redux, Flask, JWT Auth, FastAPI, Django, Phaser, Unity (2D), RESTful APIs,
+                WebGL,
+                TailwindCSS</p>
+
+            <h3>Data Analysis & Visualization</h3>
+            <p>Pandas, NumPy, Matplotlib, Seaborn, Tableau, PowerBI, Kafka, Spark, Redis, PostgreSQL, MongoDB, Heroku
+            </p>
 
             <h3>Design & User Experience</h3>
-            <p>Sketch, Figma, Adobe Illustrator, Adobe Photoshop, Storyboard </p>
+            <p>Figma, Sketch, Adobe Illustrator, Photoshop, Canva, Storyboard Pro</p>
 
-            <!-- <h3>Research & Analysis</h3>
-            <p>User research (interview, survey, user testing), HCI Qualitative/Quantitative Analysis, Surveys</p>
-         -->
             <h3>Tools & Platforms</h3>
-            <p>Unity, Visual Studio Code, Git, Firebase, Miro, Excel, AWS EC2, Azure, Phaser</p>
+            <p>Git, Visual Studio Code, Linux (Shell/Ubuntu), AWS EC2, Azure, Firebase, Miro, Docker, Postman, Notion,
+                Cursor, WordPress, Vercel, VMware, VirtualBox</p>
 
             <h3>Languages</h3>
             <p>Mandarin (native), English (fluent)</p>
         </section>
+
 
     </main>
 
