--- a/cv.html
+++ b/cv.html
@@ -309,8 +309,9 @@
             <p>Figma, Sketch, Adobe Illustrator, Photoshop, Canva, Storyboard Pro</p>
 
             <h3>Tools & Platforms</h3>
-            <p>Git, Visual Studio Code, Linux (Shell/Ubuntu), AWS EC2, Azure, Firebase, Miro, Docker, Postman, Notion,
-                Cursor, WordPress, Vercel, VMware, VirtualBox</p>
+            <p>Git, Visual Studio Code, Notion,
+                Cursor, Linux (Shell/Ubuntu), AWS EC2, Azure, Firebase, Miro, Docker, Postman, WordPress, Vercel,
+                VMware, VirtualBox</p>
 
             <h3>Languages</h3>
             <p>Mandarin (native), English (fluent)</p>
