--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
                 <p>Master of Science in Computer Science and Engineering</p>
                 <p>Sept. 2024 — Jun. 2026 (Expected)</p>
                 <p><strong>Current Curriculum: </strong>Programmers are humans too, Statistical Natural Language
-                    Processing</p>
+                    Processing, Interactive Design</p>
 
                 <!-- <p>Advisor: Duen Horng (Polo) Chau</p>
                 <p>Thesis: Democratizing Human-Centered AI with Visual Explanation and Interactive Guidance</p>
