--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
             <div class="education-item">
                 <h3>University of California, San Diego (UCSD)</h3>
                 <p>Master of Science in Computer Science and Engineering</p>
-                <p>Sept. 2024 — Jun. 2026 (Expected)</p>
+                <p>Sept. 2024 — Dec. 2025 (Expected)</p>
                 <p><strong>Current Curriculum: </strong>Programmers are humans too, Statistical Natural Language
                     Processing, Interactive Design</p>
 
@@ -122,8 +122,8 @@
                 </div>
             </div>
 
-            <!-- Add more publication items as needed -->
-            <h3>Demo</h3>
+            <!-- Add more publication items as needed
+            <h3>Demo</h3> -->
             <div class="publication-item">
                 <h4>Frontend Diffusion:
                     Empowering Self-Representation of Researchers and Designers with Multi-agent System</h4>
